Displays notifications on important events.
Notifications are shown temporarily on screen. The Long poll /stations query was changed to return the latest notifications.
